# leadscout-backend

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: keep-alive.yml
app/: async_utils.py  cache.py  config.py  dependencies.py  exceptions.py  main.py  rate_limit.py  security.py
app/middleware/: origin_guard.py  request_logger.py
app/migrations/: 0001_settings_usage.sql  0002_ai_context.sql
app/repositories/: ai_usage_repository.py  leads_repository.py  search_audit_repository.py  workspaces_repository.py
app/routes/: auth.py  explorer.py  health.py  leads.py  reports.py  settings.py  support.py
app/schemas/: auth_schema.py  common.py  enums.py  explorer_schema.py  lead_schema.py  settings_schema.py
app/scraping/: __init__.py  browser_pool.py  fetcher.py  proxy_pool.py  throttle.py  user_agents.py
app/seeds/: seed_data.py
app/services/: ai_service.py  auth_service.py  email_service.py  explorer_service.py  leads_service.py  otp_service.py  pagespeed_service.py  places_service.py  report_export_service.py  reports_service.py  scoring_service.py  settings_service.py  signing_service.py  social_scraper_service.py  (+1 more)
migrations/: 002_profile_approx_location.sql  003_search_audit_logs.sql  004_fix_rls_infinite_recursion.sql  005_performance_indexes.sql  006_social_profiles.sql  initial_schema.sql
tests/: conftest.py  test_auth_routes.py  test_cache.py  test_is_viewed.py  test_leads.py  test_proxy_pool.py  test_repositories.py  test_scoring.py  test_social_scraper.py  test_throttle.py
