[project]
name = "leadscout-ai-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.3",
    "httpx==0.28.1",
    "pydantic-settings==2.14.1",
    "pyjwt[cryptography]>=2.8.0",
    "python-dotenv==1.2.2",
    "redis==8.0.0",
    "slowapi==0.1.9",
    "supabase==2.30.1",
    "uvicorn==0.48.0",
    "playwright>=1.49",
]

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "pytest==9.0.3",
    "ruff==0.15.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
